more DB changes, cleanup